name:                pureshader-hs
version:             0.1.0.0
synopsis:            PureShader SPIR-V Frontend
description:         Please see README.md
homepage:            https://github.com/Pctg-x8/pureshader-hs#readme
license:             MIT
license-file:        LICENSE
author:              S.Percentage
maintainer:          Syn.Tri.Naga@gmail.com
copyright:           Copyright 2016 S.Percentage
category:            Development
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PSParser, Common, BlockParser
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -fwarn-missing-signatures -Wall

executable pureshader-hs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pureshader-hs
  default-language:    Haskell2010

test-suite pureshader-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pureshader-hs
                     , hspec >= 2.0.0
                     , hspec-core >= 2.0.0
                     , hspec-expectations >= 0.7.2
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Pctg-x8/pureshader-hs
